# Lab_2_OOP

./: ArgumentsHandler.cpp  ArgumentsHandler.h  CMakeLists.txt  CommandCreator.h  CommandsFactory.cpp  CommandsFactory.h  ExecutionContext.cpp  ExecutionContext.h  ICommand.h  ICommandCreator.h  README.md  WorkFlowExecutor.cpp  WorkFlowExecutor.h  WorkFlowParser.cpp  WorkFlowParser.h  WorkFlowValidator.cpp  WorkFlowValidator.h  main.cpp
Commands/: Dump.cpp  Dump.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  WriteFile.cpp  WriteFile.h
